examples/test/testpolicy1823.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1823
  namespace: namespace463
spec:
  podSelector:
    matchLabels:
      key36: value3
      key49: value48
      key2: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value45
          key35: value3
          key39: value5
      podSelector:
        matchLabels:
          key42: value32
          key43: value18
          key31: value30
